lots of clubs to join section hided some align and padding fixed

--- a/sass file/homepage.scss
+++ b/sass file/homepage.scss
@@ -112,6 +112,7 @@ $orange:orange;
 
    }
 
+
    .___banner-button{
 
         
@@ -119,7 +120,7 @@ $orange:orange;
 
         color: $bg-color;
         background: $yellow;
-        width: 400px;
+        width: 300px;
         height: 20px;
         padding: 25px;
         display: flex;
@@ -131,6 +132,9 @@ $orange:orange;
         box-shadow: 15px 20px 50px $bg-color;
         text-decoration: none;
 
+     
+       
+
        }
 
        .___banner-button-link:hover{
@@ -138,6 +142,13 @@ $orange:orange;
         transition: 1s;
            
        }
+
+       
+   }
+
+   .___no-card-required{
+
+        margin-left: 50px;
    }
 
    
